# treenity

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
tests/: test_addition.py  test_grow_tree.py
tests/end_to_end/: conftest.py  test_grow_tree_controller.py
tests/end_to_end/adapters/fastapi/: conftest.py  test_grow_tree_controller.py  test_retrieve_tree.py
tests/unit/adapters/fastapi/: conftest.py  test_generate_tree.py
tests/unit/adapters/streamlit/: test_api_client.py  test_tree_visualizer.py
tests/unit/core/: test_grow_tree_properties.py
treenity/: addition.py
treenity/adapters/primary/fastapi/: dependencies.py  main.py
treenity/adapters/primary/fastapi/controllers/: grow_tree_controller.py  retrieve_tree.py
treenity/adapters/primary/streamlit/: main.py
treenity/adapters/primary/streamlit/components/: api_client.py  models.py  tree_visualizer.py
treenity/adapters/secondary/gateways/: dual_split_strategy.py  in_memory_branch_repository.py  random_split_strategy.py
treenity/core/: grow_tree.py
treenity/core/gateways/: branch_repository.py  split_strategy.py
treenity/core/models/: branch.py
