[project]
name = "treenity"
version = "0.1.0"
description = "Small branches make great trees."
authors = [
    {name = "1bouillonbaptiste@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
