[project]
name = "treenity"
version = "0.1.0"
description = "Small branches make great trees."
authors = [
    {name = "1bouillonbaptiste@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit (>=4.3.0,<5.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "hypothesis (>=6.147.0,<7.0.0)"
]

[tool.coverage.run]
omit = ["tests/*"]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
