[project]
name = "treenity"
version = "0.1.0"
description = "Small branches make great trees."
authors = [
    {name = "1bouillonbaptiste@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit (>=4.3.0,<5.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "hypothesis (>=6.147.0,<7.0.0)",
    "fastapi (>=0.121.1,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "plotly (>=6.4.0,<7.0.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)"
]

[tool.coverage.run]
omit = ["tests/*"]

# Ignore missing type stubs for requests
[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
